fix: scrollbar causing UI break on detail modals. affected: event banners

--- a/app/globals.css
+++ b/app/globals.css
@@ -132,6 +132,7 @@ body {
 ------------------------------------------------------------------─ */
 ::-webkit-scrollbar {
   width: 6px;
+  display: none;
 }
 
 ::-webkit-scrollbar-track {
